# sendcloud-trackingAPI

./: README.md  exports.sh  requirements.txt  setup.cfg
api/: api.py
api/resources/: emailTracking.py
tests/: parcel_data.csv  test_api.py
utils/: regexTest.py  requests.py
