[metadata]
name = api
version = 1.0
url = https://localhost:5000
description = SendCloud trial day assignment.

[options]
packages = find:
    include_package_data = true
    install_requires =
    aniso8601==9.0.1
    attrs==21.2.0
    certifi==2021.5.30
    charset-normalizer==2.0.3
    click==8.0.1
    Flask==2.0.1
    Flask-RESTful==0.3.9
    idna==3.2
    iniconfig==1.1.1
    itsdangerous==2.0.1
    Jinja2==3.0.1
    MarkupSafe==2.0.1
    numpy==1.21.1
    packaging==21.0
    pandas==1.3.0
    pyparsing==2.4.7
    python-dateutil==2.8.2
    pytz==2021.1
    requests==2.26.0
    six==1.16.0
    toml==0.10.2
    urllib3==1.26.6
    Werkzeug==2.0.1

[options.extras_require]
test =
    pytest=6.2.4
    py==1.10.0
    pluggy==0.13.1

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    api